--- a/rickandmorty/scss/style.scss
+++ b/rickandmorty/scss/style.scss
@@ -1,75 +1,119 @@
 @font-face {
     font-family: "rick";
     src: url(../fonts/Rick-and-Morty-Font/get_schwifty.ttf);
-}
-*{
+  }
+  * {
     padding: 0;
     margin: 0;
     box-sizing: 0;
-}
-
-//start menu
-.menu {
+  }
+  
+  .menu {
     display: flex;
     flex-direction: column;
-}
-.menu h1{
+  }
+  
+  .menu h1 {
     text-align: center;
-}
-.menuButtons {
+  }
+  
+  .menuButtons {
     text-align: center;
-}
-.menu img{
+  }
+  
+  .menu img {
     width: auto;
     max-width: 20%;
     margin: auto;
-}
-.menuButtons button{
+  }
+  
+  .menuButtons button {
     margin: 0 20px;
-}
-
-.menuButtons button {
-	background-color:#44c767;
-	border-radius:28px;
-	border:1px solid #18ab29;
-	cursor:pointer;
-	color:#ffffff;
-	font-family:Arial;
-	font-size:17px;
-	text-shadow:0px 1px 0px #2f6627;
-    padding: 0 10px ;
-}
-.menuButtons button:hover {
-	background-color:#5cbf2a;
-}
-.menuButtons button:active {
-	position:relative;
-	top:1px;
-}
-.menu h1 {
+  }
+  
+  .menuButtons button {
+    background-color: #44c767;
+    border-radius: 28px;
+    border: 1px solid #18ab29;
+    cursor: pointer;
+    color: #ffffff;
+    font-family: Arial;
+    font-size: 17px;
+    text-shadow: 0px 1px 0px #2f6627;
+    padding: 0 10px;
+  }
+  
+  .menuButtons button:hover {
+    background-color: #5cbf2a;
+  }
+  
+  .menuButtons button:active {
+    position: relative;
+    top: 1px;
+  }
+  
+  .menu h1 {
     font-family: "rick";
     font-size: 4em;
-}
-//end menu
-
-//start character
-.characterContainer {
+  }
+  
+  .characterContainer {
     margin-top: 50px;
     display: flex;
     flex-wrap: wrap;
-    background-color: rgb(23, 171, 40, 0.5);
+    background-color: rgba(23, 171, 40, 0.5);
     width: 90%;
     margin: auto;
     justify-content: center;
-    
-}
-.cardCharacter {
+    margin-top: 5%;
+    margin-bottom: 10%;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+    border-radius: 18px;
+  }
+  
+  .cardCharacter {
     margin: 1%;
-}
-.cardCharacter img{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin: auto;
+    justify-content: center;
+  }
+  
+  .cardCharacter img {
     border-radius: 50%;
-}
-.menuButtons {
+  }
+  
+  .menuButtons {
     margin-bottom: 5%;
-}
-//end
+  }
+
+  .pageDiv {
+    background-color: rgb(68, 199, 103, 0.6);
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    padding: 20px 0;
+    text-align: center;
+  }
+  .pageDiv button{
+    background-color: #44c767;
+    border-radius: 28px;
+    border: 1px solid #18ab29;
+    cursor: pointer;
+    color: #ffffff;
+    font-family: Arial;
+    font-size: 17px;
+    text-shadow: 0px 1px 0px #2f6627;
+    margin: 0 10px;
+    padding: 0 5px;
+  }
+  
+  .pageDiv button:hover {
+    background-color: #5cbf2a;
+  }
+  
+  .pageDiv button:active {
+    position: relative;
+    top: 1px;
+  }
