--- a/eldenApi/css/style.css
+++ b/eldenApi/css/style.css
@@ -39,3 +39,18 @@ nav > button:focus {
   background-color: white;
   color: black;
 }
+
+.card {
+  display: flex;
+  flex-direction: column;
+  border: 2px solid white;
+  width: 20%;
+  height: 600px;
+  margin: auto;
+  margin-bottom: 20px;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+}
